--- a/tournament_gallery.html
+++ b/tournament_gallery.html
@@ -99,8 +99,7 @@
     <section class="section-header rounded-2xl shadow-lg p-8">
       <h2 class="text-2xl font-bold mb-4">Tournament Videos</h2>
       <div id="videoGrid" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        
-        //Independence Cup 2025 | Group B | Match 3 | Amigo FC 🆚 Strawhat Pirates
+
         <article class="video-card" data-category="group-b">
           <div class="video-thumb" data-yturl="https://youtu.be/JrzIIz7uas4" data-title="Independence Cup 2025 | Group B | Match 3 | Amigo FC 🆚 Strawhat Pirates"></div>
           <div class="p-4 flex items-center justify-between gap-2">
@@ -109,14 +108,10 @@
           </div>
         </article>
 
-        //Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt
         <article class="video-card" data-category="group-a">
-          <div class="video-thumb" 
-               data-yturl="https://youtu.be/PUT-YOUR-VIDEO-ID-HERE" 
-               data-title="Independence Cup 2025 | Group A | Match 4 | Example Team 🆚 Example Team">
-          </div>
+          <div class="video-thumb" data-yturl="https://youtu.be/JrzIIz7uas4" data-title="Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt"></div>
           <div class="p-4 flex items-center justify-between gap-2">
-            <div class="video-thumb" data-yturl="https://youtu.be/-uOE6Pf3Yr4" data-title="Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt"></div>
+            <h3 class="text-sm font-semibold truncate">Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt</h3>
             <span class="chip">Group A</span>
           </div>
         </article>
