--- a/tournament_gallery.html
+++ b/tournament_gallery.html
@@ -109,9 +109,9 @@
         </article>
 
         <article class="video-card" data-category="group-a">
-          <div class="video-thumb" data-yturl="https://youtu.be/JrzIIz7uas4" data-title="Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt"></div>
+          <div class="video-thumb" data-yturl="https://youtu.be/-uOE6Pf3Yr4" data-title="Independence Cup 2025 | Group A | Match 3 | White Panthers 🆚 Thunderbolt"></div>
           <div class="p-4 flex items-center justify-between gap-2">
-            <h3 class="text-sm font-semibold truncate">Independence Cup 2025 | Group B | Match 3 | White Panthers 🆚 Thunderbolt</h3>
+            <h3 class="text-sm font-semibold truncate">Independence Cup 2025 | Group A | Match 3 | White Panthers 🆚 Thunderbolt</h3>
             <span class="chip">Group A</span>
           </div>
         </article>
