--- a/index.html
+++ b/index.html
@@ -4,49 +4,29 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home - We Are Eleven</title>
+  <link rel="canonical" href="https://weareeleven.example/home" />
+  <link rel="me" href="https://www.instagram.com/we.are.eleven.official/" />
+  <link rel="icon" href="assets/img/favicon.png" />
+
+  <!-- Open Graph / Twitter for better shares -->
+  <meta property="og:title" content="We Are Eleven — Uniting Football Enthusiasts, One Goal at a Time" />
+  <meta property="og:description" content="Join a growing community of players, fans, and organizers. Fixtures, highlights, photos, and more." />
+  <meta property="og:image" content="assets/img/hero-stadium-og.jpg" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
       font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
       background: white;
     }
-
-  	.nav-link {
-  	  color: #4b5563; /* Tailwind gray-700 */
-  	  font-weight: 500; /* font-medium */
-  	  text-decoration: none;
-  	  transition: color 0.2s ease;
-  	}
-  
-  	.nav-link:hover {
-  	  color: #374151; /* Tailwind gray-800 */
-  	}
-  
-  	.nav-link.active {
-  	  color: #dc2626; /* Tailwind red-600 */
-  	}
-    
-    /* ✅ Floating Animation */
-    @keyframes float {
-      0%, 100% { transform: translateY(0); }
-      50% { transform: translateY(-6px); }
-    }
-
-    /* ✅ Watermark Style */
-    .watermark {
-      position: relative;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin-top: 2rem;
-    }
-    .watermark img {
-      opacity: 0.06;
-      width: 500px;   /* 🔥 bigger watermark */
-      max-width: 90%;
-    }
+    .nav-link{color:#4b5563;font-weight:500;text-decoration:none;transition:color .2s ease;}
+    .nav-link:hover{color:#374151}
+    .nav-link.active{color:#dc2626}
+    @keyframes float{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
+    .watermark{position:relative;width:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;margin-top:2rem}
+    .watermark img{opacity:.06;width:500px;max-width:90%}
   </style>
 </head>
 <body class="text-black">
@@ -54,9 +34,6 @@
   <!-- ✅ Header -->
   <div id="site-header"></div>
 
-  
-
-  
   <!-- 🏟️ Hero with football-themed background -->
   <section class="relative overflow-hidden">
     <div class="absolute inset-0 bg-[radial-gradient(ellipse_at_center,rgba(0,0,0,0.35),rgba(0,0,0,0.8))] z-0"></div>
@@ -66,9 +43,14 @@
         Uniting Football Enthusiasts, One Goal at a Time
       </h1>
       <p class="mt-4 text-lg text-gray-200">Join a growing community of players, fans, and organizers.</p>
-      <div class="mt-8">
+      <div class="mt-8 flex items-center justify-center gap-3">
         <a href="join.html" class="inline-flex items-center justify-center px-10 py-4 rounded-full bg-green-500 hover:bg-green-600 shadow-lg text-white text-lg font-semibold transition">
           Join Us
+        </a>
+        <!-- quick IG follow -->
+        <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener" aria-label="Follow us on Instagram"
+           class="inline-flex items-center justify-center px-5 py-4 rounded-full bg-white/15 hover:bg-white/25 border border-white/30 text-white text-base font-semibold transition">
+          <span class="mr-2">📸</span> @we.are.eleven.official
         </a>
       </div>
       <!-- Tournament banner -->
@@ -76,7 +58,7 @@
         <span class="text-xl">🏆</span>
         <div class="text-left">
           <div class="font-semibold">Independence Cup 2025</div>
-          <div class="text-sm text-gray-200">Starts August 24</div>
+          <div class="text-sm text-gray-200">Official results & highlights</div>
         </div>
         <a href="team_results.html" class="ml-4 text-sm font-semibold underline decoration-2 underline-offset-4">View Results</a>
       </div>
@@ -102,11 +84,11 @@
         <h3 class="font-semibold mb-1">Recognition & Awards</h3>
         <p class="text-gray-600 text-sm">Trophies, medals, and shout-outs for standout performances.</p>
       </div>
-        <a href="gallery.html" class="block rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
-          <div class="text-3xl mb-3">📸</div>
-          <h3 class="font-semibold mb-1">Event Highlights & Photos</h3>
-          <p class="text-gray-600 text-sm">Relive the best moments with curated galleries and reels.</p>
-        </a>
+      <a href="gallery.html" class="block rounded-2xl border bg-white p-6 shadow-sm hover:shadow-md transition">
+        <div class="text-3xl mb-3">📸</div>
+        <h3 class="font-semibold mb-1">Event Highlights & Photos</h3>
+        <p class="text-gray-600 text-sm">Relive the best moments with curated galleries and reels.</p>
+      </a>
     </div>
   </section>
 
@@ -133,14 +115,14 @@
       <a href="gallery.html" class="text-sm font-semibold text-blue-600 hover:underline">View all photos</a>
     </div>
     <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3">
-      <img src="assets/img/gallery-1.jpg" alt="Match action 1" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-2.jpg" alt="Match action 2" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-3.jpg" alt="Match action 3" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-4.jpg" alt="Match action 4" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-5.jpg" alt="Match action 5" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-6.jpg" alt="Match action 6" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-7.jpg" alt="Match action 7" class="rounded-xl object-cover aspect-[4/3]" />
-      <img src="assets/img/gallery-8.jpg" alt="Match action 8" class="rounded-xl object-cover aspect-[4/3]" />
+      <img src="assets/img/gallery-1.jpg" alt="Match action 1" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-2.jpg" alt="Match action 2" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-3.jpg" alt="Match action 3" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-4.jpg" alt="Match action 4" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-5.jpg" alt="Match action 5" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-6.jpg" alt="Match action 6" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-7.jpg" alt="Match action 7" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
+      <img src="assets/img/gallery-8.jpg" alt="Match action 8" class="rounded-xl object-cover aspect-[4/3]" loading="lazy" />
     </div>
   </section>
 
@@ -151,21 +133,50 @@
         <div>
           <h2 class="text-3xl font-bold mb-4">Highlights</h2>
           <div class="aspect-video rounded-2xl overflow-hidden shadow">
-            <iframe class="w-full h-full" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Highlights"
-              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            <!-- swapped to your link -->
+            <iframe class="w-full h-full"
+              src="https://www.youtube.com/embed/JrzIIz7uas4"
+              title="Independence Cup 2025 Highlights"
+              frameborder="0"
+              loading="lazy"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen></iframe>
           </div>
+          <a href="https://www.youtube.com/@weareeleven" target="_blank" rel="noopener"
+             class="inline-flex mt-4 items-center rounded-full border px-4 py-2 text-sm font-semibold bg-white hover:bg-slate-100">
+            More on YouTube →
+          </a>
         </div>
+
+        <!-- Instagram section wired to your handle -->
         <div>
-          <h2 class="text-3xl font-bold mb-4">Instagram</h2>
-          <div class="grid grid-cols-3 gap-3">
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
-            <div class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400">Post</div>
+          <div class="flex items-center justify-between mb-4">
+            <h2 class="text-3xl font-bold">Instagram</h2>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="text-sm font-semibold text-pink-600 hover:underline">
+              Follow @we.are.eleven.official
+            </a>
           </div>
+          <div class="grid grid-cols-3 gap-3">
+            <!-- Make the tiles deep-link to the profile (or swap hrefs to specific post URLs later) -->
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+            <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+               class="aspect-square rounded-xl bg-white border shadow-sm flex items-center justify-center text-gray-400 hover:scale-[1.01] transition">Post</a>
+          </div>
+          <!-- Optional: a clean CTA -->
+          <a href="https://www.instagram.com/we.are.eleven.official/" target="_blank" rel="noopener"
+             class="mt-4 inline-flex items-center rounded-full bg-black text-white px-4 py-2 text-sm font-semibold hover:bg-gray-800">
+            📸 Follow us on Instagram
+          </a>
         </div>
       </div>
     </div>
@@ -176,7 +187,6 @@
     <p>© 2025 Football Community. All Rights Reserved.</p>
   </footer>
 
-
   <script type="module">
     import { injectHeader } from "./header.js";
     import { loadTeams, hydrateTeamLogos } from "./teams-util.js";
@@ -185,6 +195,7 @@
       const maps = await loadTeams();
       hydrateTeamLogos(document, maps);
     } catch (e) { console.warn(e); }
+
     // Simple testimonials slider
     const quotes = [
       "“Best organized amateur tournament in the city!” – Subhojit, Captain of Amigos FC",
